# easyapply

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data  index.html  package-lock.json  package.json
.github/workflows/: azure-deploy.yml
docs/: azure-acr.md  azure-app-service.md  local-web-test.md  mobile-usability-checklist.md  plan.md
src/: App.tsx  main.tsx  version.ts
src-tauri/: .gitignore  Cargo.toml  app.rc  build.rs  manifest.py  tauri.conf.json
src-tauri/assets/template/ProblemSolving/: 5-Phase Report.xlsx  Containment Activity Sheet.xlsx  Development Open Issue list.xlsx  Quality Open Issue List.xlsx
src-tauri/assets/template/QualityFocusChecklist/: Quality Focus Check List Temp.xlsx
src-tauri/assets/template/Spc/: CPK.xlsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: ai.rs  easyapply.rs  lib.rs  main.rs  paths.rs  secrets.rs  server.rs
src-tauri/src/auth/: csv.rs  mod.rs
src-tauri/src/prompts/: cover_letter_generation.md  prompt_update.md
src/api/: client.ts  runtime.ts
src/auth/: AuthManager.tsx  AuthProvider.tsx  auth.css  auth_manager_types.ts
src/components/: PanelRecordSearch.tsx
src/hooks/: usePanelRecordSearch.ts  useSessionToken.ts
src/i18n/: en.json  zh.json
src/panels/: ApplicationMaterialPanel.tsx  CodeManagementPanel.tsx  CoverLetterGeneratorPage.tsx  JobAppliedPanel.tsx
src/server/: server.tsx
src/style/: index.css  theme.css
src/utils/: confirm.ts
