[package]
name = "app"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-dialog = "2"
log = "0.4"
base64 = "0.22"
tauri = { version = "2.5.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
csv = "1.3"
