[package]
name = "app"
version = "2.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "easyapply-server"
path = "src/bin/easyapply-server.rs"
required-features = ["server"]

[features]
default = []
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-dialog = "2"
log = "0.4"
base64 = "0.22"
tauri = { version = "2.5.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
aes-gcm = "0.10"
getrandom = "0.2"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
